--- a/.dbeaver/credentials-config.json
+++ b/.dbeaver/credentials-config.json
@@ -1,1 +1,2 @@
-ÀTd“HòÒ»²\¾«MëJTÊ;ô@/d~l!*ør;³W¦š<r5Cõz¼zbo Ìº+¬~RâÔÖ!2Ú.®²í¸ÞöwûóS®Ÿ½Ù=lAomS™¹/¶;.^¯¼7;F6aóˆPG®prkZRf±®¿€ðÏm÷õ©8ý-{g;®x¼ÊNì­'šQe©-[Z²ÙN?†Åä,cTP{†Èˆz3è=¥ÎÀå­càù|Š—’?0Óå&yØ€ÄOI~¸œ&‡æ9á…%Úë^	Õ”×òB}ð»ëP¾ì
+ÿegÀZÐ^l)t=ù-3 à ‡^Cùí'úü4’ö	IGóm´ÿ_t§l+k«ðäG¢E6§ÿ	§óí2o5¯ú[õ•­EjlMÖþ°qÉOØ†•fÛÔ"ë‡ñSEê"ÝÛœêz´ÜŽø!Êv¡¡•ó’û0'~2
+¶A¤lb<ÙÄõ¾;îÛ×v…H’à£IR/ˆÜd·¨Ï!Ó¼ÊÌ*•HPMh”ƒ5r§åMC˜©n¡¾\÷"ö[Å«<Öc2÷à‘täsŽ`Xÿ#Lbm†?éÎÍx/nf‚öúxQ
