--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,4 +1,6 @@
 # MYSQL DB parameters
-url = jdbc:mysql://localhost:3306/shoppingMall?useSSL=false
-user = user_shoppingMall
+url = jdbc:mysql://localhost:3306/shoppingmall?useSSL=false
+user = user_shoppingmall
 password = rootroot
+
+
